--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "electron": "^11.2.1",
     "electron-reload": "^1.5.0",
+    "express": "^4.17.1",
     "promise-mysql": "^5.0.2"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.7"
   }
 }
