--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "promise-mysql": "^5.0.2"
   },
   "devDependencies": {
+    "chalk": "^4.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   }
